tests/files/lexer_tests/should_fail/076.cmdr
//Should fail when not closing curly braces in interpolation
$"\\{";